[metadata]
name = cb_advanced_trade
version = 0.0.2
author = Claudiu DRUG
author_email = claudiu.drug@outlook.com
license = MIT License
description = Coinbase Advanced Trade API client library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ClaudiuDrug/cb-advanced-trade
project_urls =
          Bug Tracker = https://github.com/ClaudiuDrug/cb-advanced-trade/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >= 3.7
install_requires =
    requests >= 2.28.2
    requests-cache >= 0.9.8
    requests-toolbelt >= 0.10.1
    urllib3 >= 1.26.14
    websocket-client >= 1.5.1

[options.packages.find]
where = src
exclude = tests
